tests/should_succeed/unused_const.jou
import "stdlib/io.jou"

const foo: int = 7  # Warning: constant 'foo' defined but not used

def main() -> int:
    printf("it runs\n")  # Output: it runs
    return 0
