tests/syntax_error/local_vars_comma.jou
def main() -> int:
    x, y, = 0  # Error: expected ':' and a type after it (example: "foo, bar: int"), got ','
